--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "instagram-realtime",
-  "version": "0.0.0",
+  "version": "0.0.0-22",
   "description": "Event-driven, Object-oriented Instagram API Wrapper",
-  "main": "libs/instagram-realtime.js",
+  "main": "libs/InstagramStream.js",
   "dependencies": {
-    "connect" : "x.x.x",
+    "connect": "x.x.x",
     "request": "2.x.x",
-    "colors": "0.x.x"
-  },
-  "devDependencies": {
+    "colors": "0.x.x",
     "express": "3.x.x"
   },
+  "devDependencies": {},
   "scripts": {
-    "test": "node examples/express.js"
+    "start": "node examples/express.js"
   },
   "engines": {
     "node": "0.8.x"
@@ -29,5 +28,6 @@
   "author": "Matt Razorblade Hammerstadt <matt@planwork.us>",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "gitHead": "bed8113f972785860515c1e384b17d108604a531"
+  "gitHead": "bed8113f972785860515c1e384b17d108604a531",
+  "subdomain": "iriririr"
 }
