--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "request": "2.x.x"
   },
   "devDependencies": {
-    "mocha": "1.x.x",
-    "express": "3.x.x",
     "colors": "0.x.x",
+    "express": "^4.10.4",
+    "mocha": "1.x.x",
+    "nock": "^0.51.0",
     "socket.io": "0.9.x"
   },
   "scripts": {
