--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "instagram-realtime",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Event-driven, Object-oriented Instagram API Wrapper",
   "main": "libs/InstagramStream.js",
   "dependencies": {
-    "connect": "2.x.x",
-    "request": "2.x.x"
+    "express": ">=0.0.1",
+    "request": ">=0.0.1",
+    "body-parser": ">=0.0.1"
   },
   "devDependencies": {
     "chai": "^1.10.0",
     "colors": "0.x.x",
-    "express": "^4.10.4",
     "mocha": "1.x.x",
     "nock": "^0.51.0",
     "socket.io": "0.9.x"
