--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "instagram-realtime",
   "version": "0.0.4",
   "description": "Event-driven, Object-oriented Instagram API Wrapper",
-  "main": "libs/InstagramStream.js",
+  "main": "src/InstagramStream.js",
   "dependencies": {
     "connect": "2.x.x",
     "request": "2.x.x"
